--- a/demo/browser.html
+++ b/demo/browser.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Demo in browser</title>
+		<script src="../lib/markdown-extractor.js"></script>
+	</head>
+	<body>
+	<b>Open debug mode (console) to see result</b><br>
+<textarea id="content" style="width: 100%; height: 300px">
 <!--metadata
     title: NodeJS
     name: nodejs
@@ -112,3 +121,14 @@ Node.js may utilize code written in other programming languages using:
 <!--metadata
 	name-meta: meta in other place
 -->
+</textarea>
+
+<script>
+var content = document.getElementById('content').value;
+
+console.log(mdext.heading(content));
+console.log(mdext.metadata(content));
+</script>
+
+	</body>
+</html>
